--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="container">
 			<h1>Generate a <br />Random Password</h1>
-			<div>
+			<div class="display">
 				<input type="text" id="password" placeholder="Password" />
 				<img src="images/copy.png" />
 			</div>
